[gd_scene load_steps=2 format=3 uid="uid://tsi4l7ibk5ja"]

[ext_resource type="Script" uid="uid://b3j1l4eyljeva" path="res://Scripts/score_ui.gd" id="1_47jr6"]

[node name="scoreUI" type="Control" groups=["pelota"]]
layout_mode = 3
anchors_preset = 0
offset_right = 323.0
offset_bottom = 40.0
script = ExtResource("1_47jr6")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.008
anchor_right = -0.008
offset_left = -57.416
offset_top = 58.0
offset_right = 83.584
offset_bottom = 129.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "PLAYER 1 - 0
PLAYER 2 - 0"
vertical_alignment = 1
uppercase = true

[node name="GamerTimer" type="Timer" parent="."]
one_shot = true

[node name="timerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = -185.0
offset_right = 165.0
offset_bottom = -154.0
theme_override_font_sizes/font_size = 22
text = "03:00"
horizontal_alignment = 1

[node name="LabelWin" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = -92.0
offset_top = -75.0
offset_right = -52.0
offset_bottom = -40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.35755, 0.71946, 0.946671, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="GamerTimer" to="." method="_on_gamer_timer_timeout"]
